# pdf2clipboard

./: Cargo.toml  README.md  build.rs  index.html
docs/clipboard_and_cmyk_optimization/: implementation_plan.md  implementation_plan_v2.md  implementation_plan_v3.md  task.md  walkthrough.md  walkthrough_v2.md
docs/font_improvement/: implementation_plan.md  task.md  walkthrough.md
docs/performance_and_stability_optimization/: implementation_plan.md  task.md  walkthrough.md
docs/thumbnail_dct_scaling/: implementation_plan.md  task.md  walkthrough.md
docs/url_loading_and_ui_optimization/: implementation_plan.md  task.md  walkthrough.md
docs/url_loading_feature/: implementation_plan.md  task.md  walkthrough.md
docs/vertical_writing_and_wasm_support/: implementation_plan.md  task.md  walkthrough.md
pdf_oxide_local/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  LICENSE-MIT  README.md
pdf_oxide_local/benches/: cjk_benchmarks.rs  complex_script_benchmarks.rs  full_pipeline_benchmarks.rs  ligature_benchmarks.rs  pdf_extraction_performance.rs  rtl_benchmarks.rs  script_detection_benchmarks.rs  streaming_table_scaling.rs  word_boundary_benchmarks.rs
pdf_oxide_local/include/pdf_oxide_c/: pdf_oxide.h
pdf_oxide_local/src/: annotations.rs  batch.rs  cache.rs  color.rs  document.rs  error.rs  ffi.rs  lexer.rs  lib.rs  object.rs  parallel.rs  parser.rs  python.rs  wasm.rs  xref_reconstruction.rs
pdf_oxide_local/src/api/: pdf_builder.rs
pdf_oxide_local/src/compliance/: converter.rs  mod.rs
pdf_oxide_local/src/config/: extraction_profiles.rs  mod.rs
pdf_oxide_local/src/content/: graphics_state.rs  mod.rs  operators.rs  parser.rs
pdf_oxide_local/src/converters/: html.rs  markdown.rs  mod.rs  table_formatter.rs  text_post_processor.rs  whitespace.rs
pdf_oxide_local/src/crypto/: active.rs  aws_lc_provider.rs  error.rs  provider.rs  rust_provider.rs  types.rs
pdf_oxide_local/src/decoders/: dct.rs  flate.rs  lzw.rs  mod.rs  predictor.rs
src/: main.rs  platform.rs
(+156 files in other folders)
