[package]
name = "pdf-page-copier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "PDFPageCopier"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
pdf_oxide = { path = "./pdf_oxide_local", features = ["rendering", "parallel"] }

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
]

[profile.release]
opt-level = "z"
lto      = true
codegen-units = 1
strip    = true
panic    = "abort"
