[package]
name = "pdf2clipboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "PDFPageToClipboard"
path = "src/main.rs"


[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
pdf_oxide = { path = "./pdf_oxide_local", features = ["rendering", "parallel"] }
log = "0.4"
rayon = "1.10"
sys-locale = "0.3"
ehttp = "0.5"
urlencoding = "2.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Clipboard", "Document", "Element", "Navigator", "Screen", "Window", "console"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
poll-promise = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.4"

[profile.release]
opt-level = 3
lto      = "thin"
codegen-units = 16
strip    = true
panic    = "abort"
